Changed server to automatically turn off device when public permission is revoked.  Added copyright.

--- a/server/mcu_server/www/index.html
+++ b/server/mcu_server/www/index.html
@@ -102,6 +102,9 @@
     <p>Response:</p>
     <iframe name="response_frame" class="response_frame"></iframe>
     </div>
+    
+    <p><a href="https://github.com/mliberty1/mcu_proto">Source code</a></p>
+    <p>Copyright 2015 Jetperch LLC</p>
 
   </body>
 </html>
